Fix alignment of button and box

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,11 +3,18 @@ body{
     justify-content: center;
     align-items: center;
     height:100vh;
+    flex-direction: column;
+
+}
+button{
+    padding:8px;
+    margin-bottom: 32px;
 }
 .box{
     display: flex;
-    width:1000px;
-    height:1000px;
+    width:500px;
+    height:500px;
+    flex:0 0 auto;
     flex-wrap: wrap;
     align-items: stretch;
 }
